Add statement and images

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -5,9 +5,11 @@
 // Set a custom color
 $orange: #f4623a !default;
 $brown: #5c4d42 !default;
+$blue: #002868 !default;
+$red: #BF0A30 !default;
 
-// Set primary color to orange
-$primary: $orange !default;
+// Set primary color to red
+$primary: $red !default;
 
 // Font overrides
 $font-family-sans-serif: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
