Update colors and links

--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -10,6 +10,7 @@ $red: #BF0A30 !default;
 
 // Set primary color to red
 $primary: $red !default;
+$secondary: $blue !default;
 
 // Font overrides
 $font-family-sans-serif: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
