--- a/src/sass/_masthead.scss
+++ b/src/sass/_masthead.scss
@@ -2,12 +2,11 @@
 header.masthead {
 	padding-top: 10rem;
 	padding-bottom: calc(10rem - #{$navbar-height});
-	// replace the masthead.jpg image in the /img directory to change the image
-	// if the image name change, make sure to update the url path below!
 	background: linear-gradient(to bottom, #{fade-out($blue, .3)} 0%,#{fade-out($blue, .5)} 100%), url('../images/nick-betts-header2.jpeg');
 	background-position: center;
 	background-repeat: no-repeat;
 	background-attachment: scroll;
+	background-position-x: -1em;
 	background-size: cover;
 	h1 {
 		font-size: 2.25rem;
