--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -43,7 +43,11 @@
 			.nav-item {
 				.nav-link {
 					color: fade-out($white, .3);
-					padding: 0 1rem;
+					padding-top: 0.9rem;
+					padding-right: 1rem;
+					padding-left: 1rem;
+					padding-bottom: 0;
+
 					&:hover {
 						color: $white;
 					}
