--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -1,56 +1,74 @@
 // Global styling for this template
 body,
 html {
-	width: 100%;
-	height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 // Typography
 .text-white-75 {
-	color: fade-out($white, .25);
+  color: fade-out($white, .25);
 }
 
 // Custom horizontal rules
 hr.divider {
-	max-width: 3.25rem;
-	border-width: 0.2rem;
-	border-color: $primary;
+  max-width: 3.25rem;
+  border-width: 0.2rem;
+  border-color: $primary;
 }
 
 hr.light {
-	border-color: $white;
+  border-color: $white;
 }
 
 // Button restyling
 .btn {
-	font-family: $font-family-sans-serif;
+  font-family: $font-family-sans-serif;
 }
 
 .btn-xl {
-	padding: 1.25rem 2.25rem;
-	font-size: 0.85rem;
-	font-weight: 700;
-	text-transform: uppercase;
-	border: none;
-	border-radius: 10rem;
+  padding: 1.25rem 2.25rem;
+  font-size: 0.85rem;
+  font-weight: 700;
+  text-transform: uppercase;
+  border: none;
+  border-radius: 10rem;
 }
 
 // Page section padding
 .page-section {
-	padding: 8rem 0;
+  padding: 8rem 0;
 }
 
 // Modal
 .modal-backdrop {
-	background-color: #0b0b0b;
+  background-color: #0b0b0b;
 }
 
 .modal-backdrop.show {
-	opacity: 0.8;
+  opacity: 0.8;
 }
 
 .btn-group-lg {
-	.btn {
-		margin: 0.5rem 0.5rem 0.5rem 0.5rem;
-	}
+  .btn {
+    margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+  }
+}
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.embed-container
+iframe, .embed-container object, .embed-container
+embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
